welcome.lessons.welcome.array.island.Island.scala.error
island:5: error: not found: value levels
    	levels += 1
        ^island:7: error: not found: value levels
  return levels
         ^