welcome.lessons.welcome.array.island.Island.scala.code
def island(num:Array[Int]): Int = {
  var levelCounter:Int = 0
  for(i <- 0 to num.length - 2){
    if(num(i) - num(i + 1) == -1)
    	levels += 1
  }
  return levels
}